@startuml
skinparam classAttributeIconSize 0

class HttpServer {
    + {static} main(args: String[]) : void
}

class SiteConf {
    - site : ConfigSite
    - log : EcrireLog
    + SiteConf(site: ConfigSite)
    - getServerTime() : String
    + run() : void
}

class LireConfig {
    + {static} explorer(path: String) : ArrayList<ConfigSite>
}

class ConfigSite {
    - port : int
    - DocumentRoot : String
    - DefaultIndex : String
    - AccessLog : String
    - ErrorLog : String
    + getPort() : int
    + getDocumentRoot() : String
    + getDefaultIndex() : String
    + getAccessLog() : String
    + getErrorLog() : String
    + setPort(port: int) : void
    + setDocumentRoot(r: String) : void
    + setDefaultIndex(i: String) : void
    + setAccessLog(a: String) : void
    + setErrorLog(e: String) : void
    + toString() : String
}

class GererCache {
    + {static} genererETag(fichier: File) : String
    + {static} dejaAJour(etagNav: String, etagFic: String) : boolean
}

class GererStatus {
    + {static} getStatusPage() : String
}

class EcrireLog {
    - cheminLog : String
    - cheminError : String
    + EcrireLog(cheminLog: String, cheminError: String)
    + AccesLog(port: int, url: String) : void
    + AccesError(port: int, url: String) : void
    - ecrire(cheminFichier: String, message: String) : void
}

HttpServer --> LireConfig : utilise
HttpServer --> SiteConf : crée et démarre
LireConfig --> ConfigSite : retourne liste de
SiteConf --> ConfigSite : contient
SiteConf --> EcrireLog : contient
SiteConf --> GererCache : utilise
SiteConf --> GererStatus : utilise

@enduml
